@@ -1579,13 +1579,17 @@ Bool moveLoop(FvwmWindow *tmp_win, int XOffset, int YOffset, int Width,
 
   while (!finished && bad_window != tmp_win->w)
   {
+    int rc = 0;
+
     /* wait until there is an interesting event */
-    while (!XPending(dpy) ||
+    while (rc != -1 && (!XPending(dpy) ||
 	   !XCheckMaskEvent(dpy, ButtonPressMask | ButtonReleaseMask |
 			    KeyPressMask | PointerMotionMask |
-			    ButtonMotionMask | ExposureMask, &Event))
+			    ButtonMotionMask | ExposureMask, &Event)))
     {
-      if (HandlePaging(dx, dy, &xl,&yt, &delta_x,&delta_y, False, False, True))
+      rc = HandlePaging(
+	      dx, dy, &xl, &yt, &delta_x, &delta_y, False, False, True);
+      if (rc == 1)
       {
 	/* Fake an event to force window reposition */
 	if (delta_x)
@@ -1611,6 +1615,13 @@ Bool moveLoop(FvwmWindow *tmp_win, int XOffset, int YOffset, int Width,
 	Event.xmotion.y_root = yt - YOffset;
 	break;
       }
+    }
+    if (rc == -1)
+    {
+      /* block until an event arrives */
+      XMaskEvent(dpy, ButtonPressMask | ButtonReleaseMask |
+		 KeyPressMask | PointerMotionMask |
+		 ButtonMotionMask | ExposureMask, &Event);
     }
     StashEventTime(&Event);
 
@@ -2501,13 +2512,18 @@ void CMD_Resize(F_CMD_ARGS)
   /* loop to resize */
   while(!finished && bad_window != tmp_win->w)
   {
+    int rc = 0;
+
     /* block until there is an interesting event */
-    while (!XCheckMaskEvent(dpy, ButtonPressMask | ButtonReleaseMask |
-			    KeyPressMask | PointerMotionMask |
-			    ButtonMotionMask | ExposureMask, &Event))
+    while (rc != -1 &&
+	   (!XCheckMaskEvent(dpy, ButtonPressMask | ButtonReleaseMask |
+			     KeyPressMask | PointerMotionMask |
+			     ButtonMotionMask | ExposureMask, &Event)))
     {
-      if (HandlePaging(Scr.EdgeScrollX, Scr.EdgeScrollY, &x, &y,
-		       &delta_x, &delta_y, False, False, True))
+      rc = HandlePaging(
+	      Scr.EdgeScrollX, Scr.EdgeScrollY, &x, &y, &delta_x, &delta_y,
+	      False, False, True);
+      if (rc == 1)
       {
 	/* Fake an event to force window reposition */
 	Event.type = MotionNotify;
@@ -2515,6 +2531,12 @@ void CMD_Resize(F_CMD_ARGS)
 	fForceRedraw = True;
 	break;
       }
+    }
+    if (rc == -1)
+    {
+      XMaskEvent(dpy, ButtonPressMask | ButtonReleaseMask |
+		 KeyPressMask | PointerMotionMask |
+		 ButtonMotionMask | ExposureMask, &Event);
     }
     StashEventTime(&Event);
 
