@@ -1,5 +1,7 @@
 Changes in stable release 2.4.6 (05-Mar-2002)
 
+* Improved speed of opaque window movement/resizing.
+
 * Fixed a bug that caused windows not being raised and lowered
   properly.
 
